<resources>
    <string name="app_name">PhotoApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  drawer  -->
    <string name="drawer_header_subtitle">I will write the text later</string>
    <string name="app_name_with_space">Photo App</string>
    <string name="about_unspalsh_com">Unspalsh.com</string>
    <string name="about_intro">Intro</string>
    <string name="about_github">GitHub</string>
    <string name="about_support_developer">Support developer</string>
    <string name="description_unsplash_website">Unsplash website</string>
    <string name="description_intro">Intro</string>
    <string name="description_github_repository">Github repository</string>
    <string name="description_rate_the_app">Rate the app</string>
    <string name="about_rate_title">Rate</string>
    <string name="about_rate_subtitle">Maybe one day i will publish this app</string>
    <string name="about_donate_title">Donate</string>
    <string name="about_donate_subtitle">I will be very happy</string>
    <string name="about_bug_title">Report bug</string>
    <string name="about_bug_subtitle">Let\'s fix all bugs together!</string>
    <string name="about_author">Author</string>
    <string name="about_author_title">Leonid Belyakov</string>
    <string name="about_author_subtitle">Russia, Samara</string>
    <string name="about_author_follow">Follow on vk.com</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_libraries_retrofit_title">Retrofit</string>
    <string name="about_libraries_retrofit_subtitle">A type-safe HTTP client for Android and Java</string>
    <string name="about_libraries_room_title">Room</string>
    <string name="about_libraries_room_subtitle">A persistence library, part of the Android Jetpack</string>
    <string name="about_libraries_glide_title">Glide</string>
    <string name="about_libraries_glide_subtitle">Fast and efficient image loading library</string>
    <string name="donate_coffe_title">Cup of coffee</string>
    <string name="donate_coffe_subtitle">The easiest way to support your favourite developer!</string>
    <string name="donate_coffe_price">10,00$</string>
    <string name="donate_sandwich_title">Tasty sandwich</string>
    <string name="donate_sandwich_subtitle">Every one likes sandwiches!</string>
    <string name="donate_sandwich_price">25$</string>
    <string name="donate_pizza_title">Pizza</string>
    <string name="donate_pizza_subtitle">I\'m not from Italy, but i am enjoying pizzas!</string>
    <string name="donate_pizza_price">40$</string>
    <string name="donate_restaurant_title">Dinner at the restaurant</string>
    <string name="donate_restaurant_subtitle">Help the developer to invite his gf somewhere!</string>
    <string name="donate_restaurant_price">100$</string>

    <!-- collection detail screen -->
    <string name="fab_info">Info</string>
    <string name="fab_wallpaper">Set as wallpaper</string>
    <string name="fab_download">Download</string>

    <!-- screen with recycler view -->
    <string name="loading_text">Loading</string>
    <string name="no_internet_text">No Internet Connection. Please, try again.</string>
    <string name="retry_button_text">Retry</string>
    <string name="no_items_text">Nothing found…</string>
    <string name="no_items_subtitle">Just try another query</string>
    <string name="collection_detail_toolbar">By Collection</string>

    <!--  menus  -->
    <string name="menu_latest">Latest</string>
    <string name="menu_oldest">Oldest</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_open_in_browser">Open in browser</string>
    <string name="menu_share">Share</string>
    <string name="menu_day_photo">Photo of the day</string>
    <string name="menu_home">Home</string>
    <string name="menu_collections">Collections</string>
    <string name="menu_support">Support developer</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_sortby">SortBy</string>
    <string name="menu_search">Search</string>

    <!-- photo info dialog -->
    <string name="info_make_empty">Make: ---</string>
    <string name="info_model_empty">Model: ---</string>
    <string name="info_exposure_empty">Exposure: ---</string>
    <string name="info_aperture_empty">Aperture: ---</string>
    <string name="info_iso_empty">Iso: ---</string>
    <string name="info_focal_empty">Focal length: ---</string>
    <string name="info_dimensions">Dimensions: %1d x %2d</string>
    <string name="info_make">Make: %s</string>
    <string name="info_model">Model: %s</string>
    <string name="info_exposure">Exposure: %s</string>
    <string name="info_aperture">Aperture: %s</string>
    <string name="info_iso">Iso: %d</string>
    <string name="info_focal">Focal length: %s</string>

    <!-- fragments   -->
    <string name="collection_detail_author">By %s</string>
    <string name="photos_detail_likes">%d Likes</string>
    <string name="photos_detail_downloads">%d Downloads</string>
    <string name="fragment_home_title">Home</string>
    <string name="fragment_collections_title">Collections</string>
    <string name="fragment_photos_title">Photos</string>


    <string name="toast_photos_updated">Photos updated</string>
    <string name="toast_no_browser">Please, download browser app</string>
    <string name="toast_failed">Failed</string>

</resources>
