<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/drawer_main_navigation"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_photo_of_day"
            android:icon="@drawable/ic_stars_black"
            android:title="@string/menu_day_photo"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/drawer_collections"
            android:icon="@drawable/ic_collections_black"
            android:title="@string/menu_collections"
            app:showAsAction="ifRoom" />
    </group>

    <group
        android:id="@+id/drawer_second_navigation"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_support"
            android:icon="@drawable/ic_favorite_black"
            android:title="@string/menu_support"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/menu_settings"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/ic_info_black"
            android:title="@string/menu_about"
            app:showAsAction="ifRoom" />
    </group>
</menu>