<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    app:layoutDescription="@xml/fab_motion">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <include
                android:id="@+id/toolbar"
                layout="@layout/view_toolbar" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/motion_layout"
                android:paddingBottom="@dimen/x_large_intend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/details_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/details_profile"
                    android:layout_width="@dimen/logo_standard_size"
                    android:layout_height="@dimen/logo_standard_size"
                    android:background="@color/colorPrimaryDark"
                    android:padding="@dimen/small_intend"
                    app:layout_constraintEnd_toStartOf="@+id/details_profile_title"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_image" />

                <TextView
                    android:id="@+id/details_profile_title"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center_vertical|start"
                    app:layout_constraintBottom_toBottomOf="@id/details_profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/details_profile"
                    app:layout_constraintTop_toTopOf="@id/details_profile" />

                <TextView
                    android:id="@+id/details_location"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_location_black"
                    android:layout_margin="@dimen/small_intend"
                    android:drawablePadding="@dimen/small_intend"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_profile" />

                <TextView
                    android:id="@+id/details_date"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_intend"
                    android:drawablePadding="@dimen/small_intend"
                    android:drawableStart="@drawable/ic_date_black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_location" />

                <TextView
                    android:id="@+id/details_likes"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_intend"
                    android:drawableStart="@drawable/ic_favorite_black"
                    android:drawablePadding="@dimen/small_intend"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_date" />

                <TextView
                    android:id="@+id/details_downloads"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_intend"
                    android:drawableStart="@drawable/ic_download_black"
                    android:drawablePadding="@dimen/small_intend"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_likes" />

                <TextView
                    android:id="@+id/details_color_title"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_intend"
                    android:drawableStart="@drawable/ic_palette_black"
                    android:drawablePadding="@dimen/small_intend"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_downloads" />

            </androidx.constraintlayout.motion.widget.MotionLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <View
        android:id="@+id/background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_up_white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_menu_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_download_white"
        app:fabCustomSize="@dimen/fab_size" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_menu_wallpapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wallpaper_white"
        app:fabCustomSize="@dimen/fab_size" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_menu_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info_white"
        app:fabCustomSize="@dimen/fab_size" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/menu_text1"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fab_download" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/menu_text2"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fab_wallpaper" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/menu_text3"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fab_info" />

</androidx.constraintlayout.motion.widget.MotionLayout>